[all] unfinished changes to output template load